# csca5922

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  app.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
data/: vehicles.csv
docs/: presentation.md  price_prediction_plan.md
docs/styles/: custom.css
notebooks/: 01_initial_checks.ipynb  report.ipynb
