[project]
name = "csca5922"
version = "0.1.0"
description = "CSCA5922 coursework environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel",
    "jupyterlab",
    "pandas",
    "numpy",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
